(Asset table):Asset type based excel download completed

--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
@@ -207,7 +207,7 @@
             </mat-card-content>
           </mat-card>
           <ng-container *ngIf="userRole === 'operation'">
-          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('Laptop')">
+          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="AssetdownloadExcel('Laptop')">
             Export<mat-icon>download</mat-icon>
           </button>
         </ng-container>
@@ -225,7 +225,7 @@
             </mat-card-content>
           </mat-card>
           <ng-container *ngIf="userRole === 'operation'">
-          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('Phone')" >
+          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="AssetdownloadExcel('Phone')" >
             Export<mat-icon>download</mat-icon>
           </button>
         </ng-container>
@@ -242,7 +242,7 @@
             </mat-card-content>
           </mat-card>
           <ng-container *ngIf="userRole === 'operation'">
-          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('SIM card')">
+          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="AssetdownloadExcel('SIM card')">
             Export<mat-icon>download</mat-icon>
           </button>
         </ng-container>
@@ -259,7 +259,7 @@
             </mat-card-content>
           </mat-card>
           <ng-container *ngIf="userRole === 'operation'">
-          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('Magicjack')" >
+          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="AssetdownloadExcel('Magicjack')" >
             Export<mat-icon>download</mat-icon>
           </button>
         </ng-container>
@@ -277,7 +277,7 @@
             </mat-card-content>
           </mat-card>
           <ng-container *ngIf="userRole === 'operation'">
-          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('VOIP phone')">
+          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="AssetdownloadExcel('VOIP phone')">
             Export<mat-icon>download</mat-icon>
           </button>
         </ng-container>
@@ -295,7 +295,7 @@
             </mat-card-content>
           </mat-card>
           <ng-container *ngIf="userRole === 'operation'">
-          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('All')">
+          <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="AssetdownloadExcel('All')">
             Export<mat-icon>download</mat-icon>
           </button>
         </ng-container>
