Empid and Empname modifed in front and backend

--- a/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
+++ b/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
@@ -18,7 +18,7 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-            <div class="col-md-3" >
+            <!-- <div class="col-md-3" >
                 <mat-form-field appearance="outline" >
                     <mat-label>Emp Id</mat-label>
                     <input matInput placeholder="empId" formControlName="empId">
@@ -26,9 +26,9 @@
                         Emp Id is required.
                     </mat-error>
                 </mat-form-field>
-            </div>
+            </div> -->
 
-            <div class="col-md-3" >
+            <!-- <div class="col-md-3" >
                 <mat-form-field appearance="outline">
                     <mat-label>Name</mat-label>
                     <input matInput placeholder="empName" formControlName="empName">
@@ -36,7 +36,7 @@
                         Name is required.
                     </mat-error>
                 </mat-form-field>
-            </div>
+            </div> -->
             <!-- Asset Status Field -->
       <div class="col-md-3">
         <mat-form-field appearance="outline">
