--- a/DataCorner/TD/src/app/component/assettable/assettable.component.html
+++ b/DataCorner/TD/src/app/component/assettable/assettable.component.html
@@ -76,16 +76,16 @@
 
 
   <!-- Employee ID Column -->
-  <ng-container matColumnDef="empId">
+  <!-- <ng-container matColumnDef="empId">
     <th mat-header-cell *matHeaderCellDef>Employee ID</th>
     <td mat-cell *matCellDef="let asset">{{ asset.empId }}</td>
-  </ng-container>
+  </ng-container> -->
 
   <!-- Employee Name Column -->
-  <ng-container matColumnDef="empName">
+  <!-- <ng-container matColumnDef="empName">
     <th mat-header-cell *matHeaderCellDef>Employee Name</th>
     <td mat-cell *matCellDef="let asset">{{ asset.empName }}</td>
-  </ng-container>
+  </ng-container> -->
 
   <!-- Location Column -->
   <ng-container matColumnDef="location">
