--- a/DataCorner/TD/src/app/component/assettable/assettable.component.html
+++ b/DataCorner/TD/src/app/component/assettable/assettable.component.html
@@ -21,10 +21,27 @@
           <input matInput placeholder (keyup)="applyFilter($event)" #input />
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
+
       </div>
-      <ng-container>
+
+      <div class="col-md-3" >
+        <mat-form-field appearance="outline" style="width: 200px;">
+          <div class="column-selector">
+            <mat-select [(ngModel)]="selectedColumns" multiple>
+              <ng-container *ngIf="userRole==='operation'">
+              <mat-checkbox [(ngModel)]="showColumns" (change)="toggleAllColumns($event)">All</mat-checkbox>
+            </ng-container>
+              <mat-option *ngFor="let column of columns" [value]="column">{{ column }}</mat-option>
+            </mat-select>
+          </div>
+        </mat-form-field>
+      </div>
+
+
+
+      <!-- <ng-container>
         <div class="col-md-3" p></div>
-      </ng-container>
+      </ng-container> -->
       <div class="col-md-4"></div>
       <div class="col-md-2" style="display: flex; align-items: center">
         <ng-container>
@@ -47,8 +64,8 @@
             <div class="text">Export</div>
             <mat-icon>download</mat-icon>
           </button>
-
-          <!-- <button class="UpdateBtn" mat-raised-button color="primary" style="margin-left: 5px;">
+<!-- 
+          <button class="UpdateBtn" mat-raised-button color="primary" style="margin-left: 5px;">
                         <div class="text">Update</div>
                     </button> -->
         </ng-container>
@@ -56,141 +73,48 @@
     </div>
 
    
-
     <div class="mat-elevation-z4">
       <div class="table-responsive">
-        <!-- asset.component.html -->
 
         <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
-          <!-- Serial Number Column -->
-  <ng-container matColumnDef="serialNumber">
-    <th mat-header-cell *matHeaderCellDef> SerialNo </th>
-    <td mat-cell *matCellDef="let index = index">{{ index + 1 }}</td>
-  </ng-container>
-
-  <!-- Asset Id Column -->
-  <ng-container matColumnDef="assetNo">
-    <th mat-header-cell *matHeaderCellDef>Asset NO</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.assetNo }}</td>
-  </ng-container>
-
-
-  <!-- Employee ID Column -->
-  <!-- <ng-container matColumnDef="empId">
-    <th mat-header-cell *matHeaderCellDef>Employee ID</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.empId }}</td>
-  </ng-container> -->
-
-  <!-- Employee Name Column -->
-  <!-- <ng-container matColumnDef="empName">
-    <th mat-header-cell *matHeaderCellDef>Employee Name</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.empName }}</td>
-  </ng-container> -->
-
-  <!-- Location Column -->
-  <ng-container matColumnDef="location">
-    <th mat-header-cell *matHeaderCellDef>Location</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.location }}</td>
-  </ng-container>
-
-  <!-- Make Column -->
-  <ng-container matColumnDef="brand">
-    <th mat-header-cell *matHeaderCellDef>Make</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.brand }}</td>
-  </ng-container>
-
-  <!-- Model Number Column -->
-  <ng-container matColumnDef="modelNo">
-    <th mat-header-cell *matHeaderCellDef>Model Number</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.modelNo }}</td>
-  </ng-container>
-
-  <!-- Issues Column -->
-  <ng-container matColumnDef="issues">
-    <th mat-header-cell *matHeaderCellDef>Issues</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.issues }}</td>
-  </ng-container>
-
-  <!-- Asset Group Column -->
-  <ng-container matColumnDef="assetGroup">
-    <th mat-header-cell *matHeaderCellDef>Asset Group</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.assetGroup }}</td>
-  </ng-container>
-
-  <!-- Asset Type Column -->
-  <ng-container matColumnDef="assetType">
-    <th mat-header-cell *matHeaderCellDef>Asset Type</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.assetType }}</td>
-  </ng-container>
-
-  <!-- Description Column -->
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Description</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.description }}</td>
-  </ng-container>
-
-  <!-- Asset Status Column -->
-  <ng-container matColumnDef="assetStatus">
-    <th mat-header-cell *matHeaderCellDef>Asset Status</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.assetStatus }}</td>
-  </ng-container>
-
-  <!-- Serial Number Column -->
-  <ng-container matColumnDef="serialNo">
-    <th mat-header-cell *matHeaderCellDef>Serial Number</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.serialNo }}</td>
-  </ng-container>
-
-  <!-- Purchase Date Column -->
-  <ng-container matColumnDef="purchaseDate">
-    <th mat-header-cell *matHeaderCellDef>Purchase Date</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.purchaseDate }}</td>
-  </ng-container>
-
-  <!-- Invoice Number Column -->
-  <ng-container matColumnDef="invoiceNo">
-    <th mat-header-cell *matHeaderCellDef>Invoice Number</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.invoiceNo }}</td>
-  </ng-container>
-
-  <!-- Original Value Column -->
-  <ng-container matColumnDef="originalValue">
-    <th mat-header-cell *matHeaderCellDef>Original Value</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.originalValue }}</td>
-  </ng-container>
-
-  <!-- Current Value Column -->
-  <ng-container matColumnDef="currentValue">
-    <th mat-header-cell *matHeaderCellDef>Current Value</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.currentValue }}</td>
-  </ng-container>
-
-  <!-- Warranty Column -->
-  <ng-container matColumnDef="warranty">
-    <th mat-header-cell *matHeaderCellDef>Warranty</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.warranty }}</td>
-  </ng-container>
-
-  <!-- Remarks Column -->
-  <ng-container matColumnDef="remarks">
-    <th mat-header-cell *matHeaderCellDef>Remarks</th>
-    <td mat-cell *matCellDef="let asset">{{ asset.remarks }}</td>
-  </ng-container>
-
-  <!-- Action Column -->
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>Action</th>
-    <td mat-cell *matCellDef="let row">
-      <button mat-icon-button color="primary" (click)="performAction(row)">
-        <mat-icon class="material-symbols-outlined">visibility</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
-
+          <ng-container *ngFor="let column of selectedColumns; let columnIndex = index">
+            <ng-container [matColumnDef]="column">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+              <td mat-cell *matCellDef="let user; let i = index">
+                <ng-container *ngIf="column !== 'actions'; else actionsColumn">
+                  <ng-container *ngIf="column !== 'serialNumber'">
+                    <ng-container *ngIf="userRole === 'operation' && columns.includes(column)">
+                      <input matInput [value]="user[column]" (input)="updateUserProperty(user, column, $event)" />
+                    </ng-container>
+                    <ng-container *ngIf="userRole !== 'operation' || !columns.includes(column)">
+                      {{ user[column] }}
+                    </ng-container>
+                  </ng-container>
+                  <!-- <ng-container *ngIf="column === 'submit'">
+                    <button mat-raised-button color="primary" (click)="submit(user)">Update</button>
+                  </ng-container> -->
+                  <ng-container *ngIf="column === 'select'">
+                    <!-- Add a checkbox for each row -->
+                    <mat-checkbox (change)="toggleRowSelection(user)" [checked]="isSelected(user)"></mat-checkbox>
+                  </ng-container>
+                  <ng-container *ngIf="column === 'serialNumber'">{{ getSerialNumber(i) }}</ng-container>
+                </ng-container>
+                <ng-template #actionsColumn>
+                  
+                  <button mat-icon-button color="primary" aria-label="Edit" (click)="performAction(user)">
+                    <mat-icon class="material-symbols-outlined">visibility</mat-icon>
+                  </button>
+                </ng-template>
+              </td>
+            </ng-container>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="selectedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: selectedColumns; let even = even; let odd = odd"
+            [class.even-row]="even" [class.odd-row]="odd" [class.selected-row]="isSelected(row)"></tr>
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" [attr.colspan]="selectedColumns.length">No data matching the filter "{{ input.value }}"</td>
+          </tr>
+        </table>
       </div>
     </div>
 
@@ -200,3 +124,6 @@
     ></mat-paginator>
   </mat-card-content>
 </mat-card>
+
+
+
