--- a/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
+++ b/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
@@ -120,10 +120,12 @@
                 </mat-form-field>
               </div>
               
-              <div class="col-md-3" >
+              <div class="col-md-3">
                 <mat-form-field appearance="outline">
                   <mat-label>Purchase Date</mat-label>
-                  <input matInput placeholder="purchaseDate" formControlName="purchaseDate">
+                  <input matInput [matDatepicker]="purchaseDatepicker" placeholder="purchaseDate" formControlName="purchaseDate">
+                  <mat-datepicker-toggle matSuffix [for]="purchaseDatepicker"></mat-datepicker-toggle>
+                  <mat-datepicker #purchaseDatepicker></mat-datepicker>
                   <mat-error *ngIf="myForm.get('purchaseDate')?.invalid && myForm.get('purchaseDate')?.touched">
                     Purchase Date is required.
                   </mat-error>
