--- a/DataCorner/TD/src/app/component/asset-allocate-form/asset-allocate-form.component.html
+++ b/DataCorner/TD/src/app/component/asset-allocate-form/asset-allocate-form.component.html
@@ -1,2 +1,71 @@
 
-<p>asset-allocate-form works!</p>
+<app-header></app-header>
+<div class="example-button-container">
+    <button mat-fab color="primary" aria-label="Example icon button with a home icon" class="backButton" (click)="goBack()" >
+      <span class="material-icons">arrow_back</span>
+    </button>
+    <h2>Asset Form -</h2>
+    <h2>  {{ myForm.get('assetNo')?.value }}</h2>
+  </div>
+  <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+    <div class="content">
+      <div class="row">
+            <div class="col-md-3" >
+                <mat-form-field appearance="outline">
+                    <mat-label>Asset No</mat-label>
+                    <input matInput placeholder="assetNo" formControlName="assetNo">
+                    <mat-error *ngIf="myForm.get('assetNo')?.invalid && myForm.get('assetNo')?.touched">
+                        Asset Id is required.
+                    </mat-error>
+                </mat-form-field>
+            </div>
+
+         <div class="col-md-3" >
+                <mat-form-field appearance="outline" >
+                    <mat-label>Emp Id</mat-label>
+                    <input matInput placeholder="empId" formControlName="empId">
+                    <mat-error *ngIf="myForm.get('empId')?.invalid && myForm.get('empId')?.touched">
+                        Emp Id is required.
+                    </mat-error>
+                </mat-form-field>
+            </div> 
+
+             <div class="col-md-3" >
+                <mat-form-field appearance="outline">
+                    <mat-label>Name</mat-label>
+                    <input matInput placeholder="empName" formControlName="empName">
+                    <mat-error *ngIf="myForm.get('empName')?.invalid && myForm.get('empName')?.touched">
+                        Name is required.
+                    </mat-error>
+                </mat-form-field>
+            </div> 
+           
+            <div class="col-md-3" >
+                <mat-form-field appearance="outline">
+                    <mat-label>Allocated ON</mat-label>
+                    <input matInput placeholder="allocatedOn" formControlName="allocatedOn">
+                    <mat-error *ngIf="myForm.get('allocatedOn')?.invalid && myForm.get('allocatedOn')?.touched">
+                        Name is required.
+                    </mat-error>
+                </mat-form-field>
+            </div>
+      
+ 
+      <div class="col-md-3" >
+        <mat-form-field appearance="outline">
+          <mat-label>Remarks</mat-label>
+          <input matInput placeholder="Remarks" formControlName="remarks">
+          <mat-error *ngIf="myForm.get('remarks')?.invalid && myForm.get('remarks')?.touched">
+            Remarks is required.
+          </mat-error>
+        </mat-form-field>
+      </div>
+              
+        </div>
+
+    </div>
+    <div class="action" *ngIf="userRole === 'operation'" style="margin-top: -18px;">
+        <button mat-raised-button color="primary" type="submit" (click)="goBack()" >{{ isUpdateMode ? 'Update' : 'Submit' }}</button>
+        <button mat-raised-button color="warn" type="button" (click)="goBack()" >Cancel</button>
+      </div>      
+</form>
