--- a/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
+++ b/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
@@ -67,7 +67,7 @@
               </mat-form-field>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-2">
             <mat-form-field appearance="outline">
               <mat-label>Asset Status</mat-label>
               <mat-select formControlName="assetStatus">
@@ -79,6 +79,12 @@
                 Asset Status is required.
               </mat-error>
             </mat-form-field>
+          </div>
+
+          <div class="col-md-1">
+            <button mat-icon-button matSuffix (click)="openAssetPopup($event)">
+              <mat-icon>info</mat-icon>
+            </button>
           </div>
             
 
