--- a/DataCorner/TD/src/app/component/asset-info-popup/asset-info-popup.component.html
+++ b/DataCorner/TD/src/app/component/asset-info-popup/asset-info-popup.component.html
@@ -28,7 +28,7 @@
       <!-- Allocate Remarks Column -->
       <ng-container matColumnDef="allocatRemarks">
         <mat-header-cell *matHeaderCellDef> Allocat Remarks </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.allocatRemarks }} </mat-cell>
+        <mat-cell *matCellDef="let row"> {{ row.allocateRemarks }} </mat-cell>
       </ng-container>
 
       <!-- Returned On Column -->
@@ -40,7 +40,7 @@
       <!-- Returned Remarks Column -->
       <ng-container matColumnDef="returnedRemarks">
         <mat-header-cell *matHeaderCellDef> Returned Remarks </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.returnedRemarks }} </mat-cell>
+        <mat-cell *matCellDef="let row"> {{ row.returnRemarks }} </mat-cell>
       </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
