--- a/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
+++ b/DataCorner/TD/src/app/component/asset-management from/asset-management.component.html
@@ -83,10 +83,13 @@
           
 
           <div class="col-md-1" style="margin-left: 10px;">
-            <button mat-button color="primary" (click)="openAssetPopup($event)">
-                View Allocation History
+            <button mat-button color="primary" (click)="openAssetPopup($event)" class="allocation-history-button">
+              <span class="material-icons" style="font-size: 24px;">history</span> <!-- Adjust the font-size as needed -->
+              View Allocation History
             </button>
-        </div>
+          </div>
+          
+          
         
             
 
