--- a/DataCorner/TD/src/app/component/assettable/assettable.component.html
+++ b/DataCorner/TD/src/app/component/assettable/assettable.component.html
@@ -26,7 +26,7 @@
 
       <div class="col-md-3" >
         <mat-form-field appearance="outline" style="width: 200px;">
-          <div class="column-selector">
+          <div class="column-selector" >
             <mat-select [(ngModel)]="selectedColumns" multiple>
               <ng-container *ngIf="userRole==='operation'">
               <mat-checkbox [(ngModel)]="showColumns" (change)="toggleAllColumns($event)">All</mat-checkbox>
@@ -81,7 +81,7 @@
             <ng-container [matColumnDef]="column">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
               <td mat-cell *matCellDef="let user; let i = index">
-                <ng-container *ngIf="column !== 'actions'; else actionsColumn">
+                <ng-container *ngIf="column !== 'View/Edit'; else actionsColumn">
                   <ng-container *ngIf="column !== 'serialNumber'">
                     <ng-container *ngIf="userRole === 'operation' && columns.includes(column)">
                       <input matInput [value]="user[column]" (input)="updateUserProperty(user, column, $event)" />
