--- a/DataCorner/TD/src/app/component/assettable/assettable.component.html
+++ b/DataCorner/TD/src/app/component/assettable/assettable.component.html
@@ -1,17 +1,12 @@
 <app-header></app-header>
 
 <div class="example-button-container">
-  <button
-    mat-fab
-    color="primary"
-    aria-label="Example icon button with a home icon"
-    class="backButton"
-    (click)="goBack()"
-  >
+  <button mat-fab color="primary" aria-label="Example icon button with a home icon" class="backButton" (click)="goBack()">
     <span class="material-icons">arrow_back</span>
   </button>
   <h2>Asset List</h2>
 </div>
+
 <mat-card>
   <mat-card-content>
     <div class="row">
@@ -21,116 +16,100 @@
           <input matInput placeholder (keyup)="applyFilter($event)" #input />
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
-
       </div>
 
-      <div class="col-md-3" >
+      <div class="col-md-3">
         <mat-form-field appearance="outline" style="width: 200px;">
-          <div class="column-selector" >
+          <div class="column-selector">
             <mat-select [(ngModel)]="selectedColumns" multiple>
               <ng-container *ngIf="userRole==='operation'">
-              <mat-checkbox [(ngModel)]="showColumns" (change)="toggleAllColumns($event)">All</mat-checkbox>
-            </ng-container>
+                <mat-checkbox [(ngModel)]="showColumns" (change)="toggleAllColumns($event)">All</mat-checkbox>
+              </ng-container>
               <mat-option *ngFor="let column of columns" [value]="column">{{ column }}</mat-option>
             </mat-select>
           </div>
         </mat-form-field>
       </div>
 
-
-
-      <!-- <ng-container>
-        <div class="col-md-3" p></div>
-      </ng-container> -->
       <div class="col-md-4"></div>
       <div class="col-md-2" style="display: flex; align-items: center">
         <ng-container>
-          <button
-            class="Btn"
-            mat-raised-button
-            color="primary"
-            (click)="assestAdd()"
-          >
+          <button class="Btn" mat-raised-button color="primary" (click)="assestAdd()">
             <div class="text">Add</div>
           </button>
 
-          <button
-            class="ExprtBtn"
-            mat-raised-button
-            color="primary"
-            style="margin-left: 5px"
-            (click)="downloadExcel()"
-          >
+          <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px" (click)="downloadExcel()">
             <div class="text">Export</div>
             <mat-icon>download</mat-icon>
           </button>
-<!-- 
-          <button class="UpdateBtn" mat-raised-button color="primary" style="margin-left: 5px;">
-                        <div class="text">Update</div>
-                    </button> -->
         </ng-container>
       </div>
     </div>
 
-   
     <div class="mat-elevation-z4">
       <div class="table-responsive">
-
         <table mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover">
+          <!-- Define 'Delete' column separately -->
+          <ng-container [matColumnDef]="'Delete'">
+            <th mat-header-cell *matHeaderCellDef>Delete</th>
+            <td mat-cell *matCellDef="let user">
+                <button mat-icon-button color="warn" aria-label="Delete" (click)="deleteUser(user)">
+                    <mat-icon class="material-icons">delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+        
+        
+
+          <!-- Define other columns dynamically -->
           <ng-container *ngFor="let column of selectedColumns; let columnIndex = index">
-            <ng-container [matColumnDef]="column">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
-              <td mat-cell *matCellDef="let user; let i = index">
-                <ng-container *ngIf="column !== 'View/Edit'; else actionsColumn">
-                  <ng-container *ngIf="column !== 'serialNumber'">
-                    <ng-container *ngIf="userRole === 'operation' && columns.includes(column)">
-                      <input matInput [value]="user[column]" (input)="updateUserProperty(user, column, $event)" />
+            <ng-container *ngIf="column !== 'Delete'">
+              <ng-container [matColumnDef]="column">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+                <td mat-cell *matCellDef="let user; let i = index">
+                  <ng-container *ngIf="column !== 'View/Edit'; else actionsColumn">
+                    <ng-container *ngIf="column !== 'serialNumber'">
+                      <ng-container *ngIf="userRole === 'operation' && columns.includes(column)">
+                        <input matInput [value]="user[column]" (input)="updateUserProperty(user, column, $event)" />
+                      </ng-container>
+                      <ng-container *ngIf="userRole !== 'operation' || !columns.includes(column)">
+                        {{ user[column] }}
+                      </ng-container>
                     </ng-container>
-                    <ng-container *ngIf="userRole !== 'operation' || !columns.includes(column)">
-                      {{ user[column] }}
+                    <ng-container *ngIf="column === 'select'">
+                      <mat-checkbox (change)="toggleRowSelection(user)" [checked]="isSelected(user)"></mat-checkbox>
                     </ng-container>
+                    <ng-container *ngIf="column === 'serialNumber'">{{ getSerialNumber(i) }}</ng-container>
                   </ng-container>
-                  <!-- <ng-container *ngIf="column === 'submit'">
-                    <button mat-raised-button color="primary" (click)="submit(user)">Update</button>
-                  </ng-container> -->
-                  <ng-container *ngIf="column === 'select'">
-                    <!-- Add a checkbox for each row -->
-                    <mat-checkbox (change)="toggleRowSelection(user)" [checked]="isSelected(user)"></mat-checkbox>
+                  <ng-template #actionsColumn>
+                    <button mat-icon-button color="primary" aria-label="Edit" (click)="performAction(user)">
+                      <mat-icon class="material-symbols-outlined">visibility</mat-icon>
+                    </button>
+                  </ng-template>
+                  <ng-container *ngIf="column === 'status'">
+                    <button mat-button color="primary" (click)="performStatusAction(user)" *ngIf="user.showStatusButton !== false">
+                      {{ user.allocationAction }}
+                    </button>
                   </ng-container>
-                  <ng-container *ngIf="column === 'serialNumber'">{{ getSerialNumber(i) }}</ng-container>
-                </ng-container>
-                <ng-template #actionsColumn>
-                  
-                  <button mat-icon-button color="primary" aria-label="Edit" (click)="performAction(user)">
-                    <mat-icon class="material-symbols-outlined">visibility</mat-icon>
-                  </button>
-                </ng-template>
-                <!-- Modify this section in your HTML -->
-<ng-container *ngIf="column === 'status'">
-  <button mat-button color="primary" (click)="performStatusAction(user)" *ngIf="user.showStatusButton !== false">
-    {{ user.allocationAction }}
-  </button>
-</ng-container>
-              </td>
+                </td>
+              </ng-container>
             </ng-container>
           </ng-container>
+
+          <!-- Header row definition -->
           <tr mat-header-row *matHeaderRowDef="selectedColumns"></tr>
+
+          <!-- Row definition -->
           <tr mat-row *matRowDef="let row; columns: selectedColumns; let even = even; let odd = odd"
             [class.even-row]="even" [class.odd-row]="odd" [class.selected-row]="isSelected(row)"></tr>
+          <!-- No data row definition -->
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" [attr.colspan]="selectedColumns.length">No data matching the filter "{{ input.value }}"</td>
           </tr>
-          
         </table>
       </div>
     </div>
 
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </mat-card-content>
 </mat-card>
-
-
-
